# Pure_Data_CMake

./: README.MD
audio/: CMakeLists.txt  commands.txt
audio/my_blp~/: CMakeLists.txt  my_blp~.c
audio/my_tabread4~/: CMakeLists.txt  my_tabread4~.c
audio/pan~/: CMakeLists.txt  pan~.c
audio/reson~/: CMakeLists.txt  reson~.c
control/: CMakeLists.txt  Makefile-all.win  commands.txt
control/args/: CMakeLists.txt  Makefile.win  args.c
control/argsi/: CMakeLists.txt  Makefile.win  argsi.c
control/argsio/: CMakeLists.txt  Makefile.win  argsio.c
control/counter_a/: CMakeLists.txt  Makefile.win  counter_a.c
control/counter_b/: CMakeLists.txt  Makefile.win  counter_b.c
control/hello/: CMakeLists.txt  Makefile.win  hello.c
control/tutlib/: CMakeLists.txt  Makefile.win  counter_a2.c  counter_b2.c  hello2.c  tutlib.c  tutlib.h
doc/: guia_codigo_pd.c
ejemplos/: args-example.pd  argsi-example.pd  argsio-example.pd  my_blp~-example.pd  my_tabread4~-example.pd  reson~-example.pd  tutorial-audio.pd  tutorial-control-tutlib.pd  tutorial-control.pd  tutorial-hello.pd
